# cw-exec-ibc

./: .gitignore  Aquarium.toml  Cargo.toml  README.md  contracts.json
artifacts/: checksums.txt  checksums_intermediate.txt
contracts/icatest/: Cargo.toml
contracts/icatest/src/: contract.rs  error.rs  lib.rs  state.rs
data/localkujira/config/: app.toml  config.toml
scripts/: Cargo.toml
scripts/src/: delegate.rs  deploy.rs  register.rs
