[workspace]
members = ["contracts/*", "packages/*", "integration-tests", "scripts"]
exclude = ["scripts"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
kujira = { git = "https://github.com/Team-Kujira/kujira-rs.git", branch = "next" }
kujira-rs-testing = { git = "https://github.com/Team-Kujira/kujira-rs-testing.git", branch = "next" }
cosmwasm-std = "1.2"
cosmwasm-storage = "1.2"
cw-storage-plus = "1.0"
cw-utils = "1.0"
cw2 = "1.0"
cosmwasm-schema = "1.2"
cw-multi-test = "0.16"
schemars = "0.8"
serde = "1.0"