[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aquarium = { git = "https://github.com/AmitPr/aquarium", branch = "main" }
kujira = { workspace = true, version = "0.8" }
cosmwasm-std = { workspace = true, version = "1.2" }
serde_json = "1.0.94"
interface = { workspace = true }

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[[bin]]
name = "register"
path = "src/register.rs"

[[bin]]
name = "delegate"
path = "src/delegate.rs"
